<resources>
    <string name="app_name">Science Bowl</string>
    <string name="app_id">870364490661</string>

    <string name="next_button">NEXT</string>
    <string name="prev_button">PREV</string>

    <string name="play_button">PLAY OFFLINE</string>
    <string name="play_online_button">PLAY ONLINE</string>
    <string name="statistics_button">VIEW STATISTICS</string>
    <string name="leaderboard_button">LEADERBOARDS</string>
    <string name="settings_button">SETTINGS</string>
    <string name="review_button">REVIEW</string>
    <string name="sign_in_leaderboard_button">LEADERBOARD SIGN-IN</string>
    <string name="sign_out_leaderboard_button">LEADERBOARD SIGN-OUT</string>
    <string name="sign_out_button">SIGN OUT</string>

    <string name="facebook_app_id">1710953529154317</string>

    <string name="login_button">LOGIN</string>
    <string name="signup_button">SIGN UP</string>
    <string name="signOut_button">SIGN OUT</string>

    <string name="difficulty_seekbar_hint">Pick a Difficulty</string>

    <string name="earth_science_button">Earth Science</string>
    <string name="biology_button">Biology</string>
    <string name="physics_button">Physics</string>
    <string name="chemistry_button">Chemistry</string>
    <string name="energy_button">Energy</string>
    <string name="math_button">Math</string>
    <string name="astro_button">Astronomy</string>

    <string name="BASE_URI">https://science-bowl.firebaseio.com</string>
    <string name="DIR_SETTINGS">/user-settings</string>
    <string name="DIR_QUIZ">/quizlist</string>
    <string name="leaderboard_id_questions_answered">CgkIpdeQrqoZEAIQAA</string>
    <string name="sign_up_text"><u>Need an account? Sign up here.</u></string>
    <string name="user_states">/user_states</string>
    <string name="active_games_url">/active_games</string>

    <!-- statistics activity -->
    <string name="statistics_title_text">%1$s Statistics</string>
    <string name="statistics_name_percent_correct">Percent Questions Correct</string>
    <string name="statistics_name_questions_correct">Total Questions Correct</string>
    <string name="statistics_value_percent_correct">%1$d</string>
    <string name="statistics_value_questions_correct">%1$d</string>

    <!-- toasts -->
    <string name="toast_leaderboard_questions_answered_submitted">Score submitted to leaderboard! (%1$d)</string>
    <string name="title_activity_play_online">PlayOnlineActivity</string>
</resources>
