<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_vertical"
              android:clickable="false">

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/play_button"
        android:id="@+id/play_button"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/play_online_button"
        android:id="@+id/play_online_button"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/review_button"
        android:id="@+id/review_button"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/statistics_button"
        android:id="@+id/statistics_button"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard_button"
        android:id="@+id/leaderboard_button"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_button"
        android:id="@+id/settings_button"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:text="@string/signOut_button"
        android:id="@+id/signOut_button"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>