<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">


    <android.support.v4.view.ViewPager
        android:id="@+id/subject_statistics_pager"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1" />

    <LinearLayout android:id="@+id/statistics_buttons_layout"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        style="?android:attr/buttonBarStyle" >

        <Button android:id="@+id/earth_science_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earth_science_button"
            style="?android:attr/buttonBarButtonStyle" />
        <Button android:id="@+id/biology_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/biology_button"
            style="?android:attr/buttonBarButtonStyle" />
        <Button android:id="@+id/physics_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/physics_button"
            style="?android:attr/buttonBarButtonStyle" />
        <Button android:id="@+id/chemistry_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chemistry_button"
            style="?android:attr/buttonBarButtonStyle" />
        <Button android:id="@+id/energy_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/energy_button"
            style="?android:attr/buttonBarButtonStyle" />
        <Button android:id="@+id/math_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/math_button"
            style="?android:attr/buttonBarButtonStyle" />
        <Button android:id="@+id/astro_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/astro_button"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>